--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-
+#kafka local producer properties
+spring.kafka.producer.bootstrap-servers=localhost:29092
+spring.kafka.producer.client-id=pessoa-producer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
+#kafka local consumer properties
+spring.kafka.consumer.bootstrap-servers=localhost:29092
+spring.kafka.consumer.group-id=pessoa-consumer
+spring.kafka.consumer.auto-offset-reset=latest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
+#kafka schema registry configs
+spring.kafka.properties.schema.registry.url=http://0.0.0.0:8085
+spring.kafka.properties.specific.avro.reader=true
+auto.create.topics.enable=true
